--- a/code/notebooks/experim_1.ipynb
+++ b/code/notebooks/experim_1.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0af5e1c7-9ece-45e3-8348-f6e3f2a7707a",
    "metadata": {},
    "outputs": [
@@ -51,48 +51,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:37<00:00, 26.45it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:35<00:00, 26.95it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:35<00:00, 26.86it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:35<00:00, 26.98it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:36<00:00, 26.74it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:36<00:00, 26.74it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:37<00:00, 26.37it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:37<00:00, 26.28it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:36<00:00, 26.73it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:09<00:00, 22.65it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:11<00:00, 22.25it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:12<00:00, 22.14it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:10<00:00, 22.43it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:10<00:00, 22.51it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:14<00:00, 21.72it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:09<00:00, 22.52it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:14<00:00, 21.72it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:12<00:00, 22.12it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:31<00:00, 27.41it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:31<00:00, 27.14it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:30<00:00, 27.70it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:30<00:00, 27.65it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:30<00:00, 27.70it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:29<00:00, 27.80it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:30<00:00, 27.46it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:29<00:00, 27.78it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:29<00:00, 27.92it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [02:19<00:00, 21.84it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [02:23<00:00, 21.17it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [02:20<00:00, 21.66it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [02:05<00:00, 24.13it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:58<00:00, 25.73it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:58<00:00, 25.56it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [02:00<00:00, 25.27it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:57<00:00, 25.77it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:58<00:00, 25.63it/s]\n"
+      " 82%|██████████████████████████████████████████████████████████████████████████                | 2114/2570 [01:20<00:34, 13.04it/s]"
      ]
     }
    ],
    "source": [
     "dir = '../results/'\n",
-    "file = 'experim_30.json'\n",
+    "file = 'experim_50.json'\n",
     "\n",
     "seeds = np.arange(4) + 101\n",
     "\n",
@@ -112,16 +77,20 @@
     "\n",
     "different_noises = [1]\n",
     "different_windows = [10]\n",
-    "different_wf = [\"simple_101\", \"const\", \"diverge_05\"]\n",
-    "different_af = []\n",
+    "\n",
+    "# different_wf = [\"simple_101\", \"const\", \"diverge_05\"]\n",
+    "different_af = [\"const_1100\", \"const_1500\", \"shift_10\", \"shift_100\", \"shift_1000\"]\n",
     "\n",
     "\n",
     "interesting = set()\n",
     "\n",
-    "for key_w in different_wf:\n",
-    "    interesting.add((key_w, \"decaying past-8\", \"default\"))\n",
-    "    interesting.add((key_w, \"decaying past-16\", \"default\"))\n",
-    "    interesting.add((key_w, \"decaying past-64\", \"default\"))\n",
+    "# for key_w in different_wf:\n",
+    "#     interesting.add((key_w, \"start\", \"default\"))\n",
+    "\n",
+    "for key_a in different_af:\n",
+    "    interesting.add((\"simple_101\", \"increasing past\", key_a))\n",
+    "    interesting.add((\"const\", \"increasing past\", key_a))\n",
+    "    interesting.add((\"diverge_05\", \"increasing past\", key_a))\n",
     "\n",
     "\n",
     "experiments, df = run_experiments(dir+file, seeds, params, different_noises, different_windows, interesting)\n",
@@ -133,201 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0b9c4075-7fdd-498f-9cc7-9fdbc088e1a4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>noise_var</th>\n",
-       "      <th>train_window</th>\n",
-       "      <th>weight_function</th>\n",
-       "      <th>mixing_type</th>\n",
-       "      <th>alpha_function</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>random_0</th>\n",
-       "      <th>random_1</th>\n",
-       "      <th>random_2</th>\n",
-       "      <th>random_3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1 / (x^1.01)</td>\n",
-       "      <td>decaying past-16</td>\n",
-       "      <td>1 / (x + 1)</td>\n",
-       "      <td>121565.33</td>\n",
-       "      <td>106519.99</td>\n",
-       "      <td>95821.86</td>\n",
-       "      <td>152361.48</td>\n",
-       "      <td>131557.98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1 / (x^1.01)</td>\n",
-       "      <td>decaying past-64</td>\n",
-       "      <td>1 / (x + 1)</td>\n",
-       "      <td>128386.75</td>\n",
-       "      <td>113014.06</td>\n",
-       "      <td>99280.06</td>\n",
-       "      <td>160412.16</td>\n",
-       "      <td>140840.73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1 / (x^1.01)</td>\n",
-       "      <td>decaying past-8</td>\n",
-       "      <td>1 / (x + 1)</td>\n",
-       "      <td>117451.82</td>\n",
-       "      <td>102694.84</td>\n",
-       "      <td>94109.43</td>\n",
-       "      <td>147065.53</td>\n",
-       "      <td>125937.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1 / c</td>\n",
-       "      <td>decaying past-16</td>\n",
-       "      <td>1 / (x + 1)</td>\n",
-       "      <td>114263.55</td>\n",
-       "      <td>97894.66</td>\n",
-       "      <td>95431.87</td>\n",
-       "      <td>135869.13</td>\n",
-       "      <td>127858.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1 / c</td>\n",
-       "      <td>decaying past-64</td>\n",
-       "      <td>1 / (x + 1)</td>\n",
-       "      <td>114019.08</td>\n",
-       "      <td>97745.33</td>\n",
-       "      <td>95140.72</td>\n",
-       "      <td>135599.49</td>\n",
-       "      <td>127590.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1 / c</td>\n",
-       "      <td>decaying past-8</td>\n",
-       "      <td>1 / (x + 1)</td>\n",
-       "      <td>114641.35</td>\n",
-       "      <td>98294.02</td>\n",
-       "      <td>95666.15</td>\n",
-       "      <td>136173.24</td>\n",
-       "      <td>128431.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1 / (x^0.5)</td>\n",
-       "      <td>decaying past-16</td>\n",
-       "      <td>1 / (x + 1)</td>\n",
-       "      <td>108358.94</td>\n",
-       "      <td>93063.37</td>\n",
-       "      <td>91389.76</td>\n",
-       "      <td>131613.87</td>\n",
-       "      <td>117368.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1 / (x^0.5)</td>\n",
-       "      <td>decaying past-64</td>\n",
-       "      <td>1 / (x + 1)</td>\n",
-       "      <td>108357.62</td>\n",
-       "      <td>93636.67</td>\n",
-       "      <td>90491.94</td>\n",
-       "      <td>131537.07</td>\n",
-       "      <td>117764.78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1 / (x^0.5)</td>\n",
-       "      <td>decaying past-8</td>\n",
-       "      <td>1 / (x + 1)</td>\n",
-       "      <td>108592.59</td>\n",
-       "      <td>93084.38</td>\n",
-       "      <td>91924.49</td>\n",
-       "      <td>131631.82</td>\n",
-       "      <td>117729.66</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  noise_var train_window weight_function       mixing_type alpha_function  \\\n",
-       "1         1           10    1 / (x^1.01)  decaying past-16    1 / (x + 1)   \n",
-       "2         1           10    1 / (x^1.01)  decaying past-64    1 / (x + 1)   \n",
-       "5         1           10    1 / (x^1.01)   decaying past-8    1 / (x + 1)   \n",
-       "7         1           10           1 / c  decaying past-16    1 / (x + 1)   \n",
-       "0         1           10           1 / c  decaying past-64    1 / (x + 1)   \n",
-       "4         1           10           1 / c   decaying past-8    1 / (x + 1)   \n",
-       "8         1           10     1 / (x^0.5)  decaying past-16    1 / (x + 1)   \n",
-       "3         1           10     1 / (x^0.5)  decaying past-64    1 / (x + 1)   \n",
-       "6         1           10     1 / (x^0.5)   decaying past-8    1 / (x + 1)   \n",
-       "\n",
-       "        mean   random_0  random_1   random_2   random_3  \n",
-       "1  121565.33  106519.99  95821.86  152361.48  131557.98  \n",
-       "2  128386.75  113014.06  99280.06  160412.16  140840.73  \n",
-       "5  117451.82  102694.84  94109.43  147065.53  125937.48  \n",
-       "7  114263.55   97894.66  95431.87  135869.13  127858.52  \n",
-       "0  114019.08   97745.33  95140.72  135599.49  127590.77  \n",
-       "4  114641.35   98294.02  95666.15  136173.24  128431.99  \n",
-       "8  108358.94   93063.37  91389.76  131613.87  117368.75  \n",
-       "3  108357.62   93636.67  90491.94  131537.07  117764.78  \n",
-       "6  108592.59   93084.38  91924.49  131631.82  117729.66  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "4001708a-97a7-4d60-9206-bc48ea6ae0c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dc9cb1f5-847f-4a47-8fcb-de4d64e05bc4",
    "metadata": {},
    "outputs": [],
@@ -339,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "423d77de-6b38-432c-bf3f-4cf2a8596dc9",
    "metadata": {},
    "outputs": [],
@@ -349,22 +142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "65d96f9c-7b32-4a32-817e-c3257b4500ed",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'merged' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m shift \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m80\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m----> 2\u001b[0m vital \u001b[38;5;241m=\u001b[39m \u001b[43mmerged\u001b[49m[shift \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m0\u001b[39m: shift \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m12\u001b[39m]\n\u001b[1;32m      3\u001b[0m anls \u001b[38;5;241m=\u001b[39m [experiment\u001b[38;5;241m.\u001b[39mlogs \u001b[38;5;28;01mfor\u001b[39;00m experiment \u001b[38;5;129;01min\u001b[39;00m vital]\n\u001b[1;32m      4\u001b[0m labels \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mstr\u001b[39m(experiment\u001b[38;5;241m.\u001b[39mtrain_window) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m + \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m experiment\u001b[38;5;241m.\u001b[39mkey_a \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m + \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m experiment\u001b[38;5;241m.\u001b[39mmixing_type \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m + \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m experiment\u001b[38;5;241m.\u001b[39mkey_w \u001b[38;5;28;01mfor\u001b[39;00m experiment \u001b[38;5;129;01min\u001b[39;00m vital]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'merged' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shift = 80 * 2\n",
     "vital = merged[shift + 0: shift + 12]\n",
@@ -395,6 +176,14 @@
     "# print(df_r.to_latex(index=False, float_format=\"%.2f\"))\n",
     "# df[[\"noise_var\", \"train_window\", \"regret\"]].groupby([\"noise_var\", \"train_window\"]).mean()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7ef70ef-68e4-468a-a137-cb8a4146daa0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
