--- a/code/notebooks/experim_1d.ipynb
+++ b/code/notebooks/experim_1d.ipynb
@@ -51,78 +51,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:13<00:00, 34.74it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:17<00:00, 33.29it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.76it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.73it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:17<00:00, 32.97it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:17<00:00, 33.28it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.44it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.58it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.45it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.55it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.67it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.48it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.62it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.65it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.65it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.64it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.76it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:16<00:00, 33.43it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:39<00:00, 29.52it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:41<00:00, 28.86it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:42<00:00, 28.69it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:40<00:00, 29.22it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:41<00:00, 28.89it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:52<00:00, 26.03it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:00<00:00, 24.30it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:58<00:00, 24.61it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:04<00:00, 23.55it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:58<00:00, 24.73it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:56<00:00, 25.06it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [01:57<00:00, 25.00it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:04<00:00, 23.49it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:00<00:00, 24.39it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:02<00:00, 23.89it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:01<00:00, 24.13it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:00<00:00, 24.20it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2927/2927 [02:04<00:00, 23.49it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:34<00:00, 26.54it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:26<00:00, 28.99it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.28it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:14<00:00, 33.41it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:13<00:00, 34.15it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:13<00:00, 33.84it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:13<00:00, 34.05it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:11<00:00, 34.73it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.42it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.47it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.52it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.64it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.21it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:13<00:00, 34.15it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:15<00:00, 33.16it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:15<00:00, 33.19it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:12<00:00, 34.30it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2497/2497 [01:14<00:00, 33.30it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:48<00:00, 27.98it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:53<00:00, 26.79it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:49<00:00, 27.70it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:49<00:00, 27.81it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:49<00:00, 27.86it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:49<00:00, 27.80it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:48<00:00, 28.09it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:51<00:00, 27.27it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:47<00:00, 28.22it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:48<00:00, 27.94it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 3037/3037 [01:47<00:00, 28.24it/s]\n",
-      " 51%|█████████████████████████████████████████████▌                                            | 1538/3037 [00:28<00:52, 28.61it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [02:10<00:00, 19.69it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [02:01<00:00, 21.20it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:52<00:00, 22.89it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:51<00:00, 22.95it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:53<00:00, 22.72it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [01:53<00:00, 22.72it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [02:03<00:00, 20.79it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [02:12<00:00, 19.46it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [02:02<00:00, 21.00it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████| 2570/2570 [02:09<00:00, 19.88it/s]\n",
+      " 94%|████████████████████████████████████████████████████████████████████████████████████▌     | 2416/2570 [01:53<00:14, 10.59it/s]"
      ]
     }
    ],
    "source": [
     "dir = '../results/'\n",
-    "file = 'experim_26.json'\n",
+    "file = 'experim_51.json'\n",
     "\n",
     "seeds = np.arange(4) + 101\n",
     "\n",
@@ -140,16 +85,22 @@
     "                upper_bound = 300,\n",
     "                alternating=True)\n",
     "\n",
-    "different_noises = [0.1, 2, 5, 10, 20, 50]\n",
+    "different_noises = [1]\n",
     "different_windows = [10]\n",
-    "different_wf = [\"simple_101\", \"const\", \"diverge_05\"]\n",
-    "different_af = []\n",
+    "\n",
+    "# different_wf = [\"simple_101\", \"const\", \"diverge_05\"]\n",
+    "different_af = [\"const_1100\", \"const_1500\", \"shift_10\", \"shift_100\", \"shift_1000\"]\n",
     "\n",
     "\n",
     "interesting = set()\n",
     "\n",
-    "for key_w in different_wf:\n",
-    "    interesting.add((key_w, \"uniformal past\", \"default\"))\n",
+    "# for key_w in different_wf:\n",
+    "#     interesting.add((key_w, \"start\", \"default\"))\n",
+    "\n",
+    "for key_a in different_af:\n",
+    "    interesting.add((\"simple_101\", \"decaying past\", key_a))\n",
+    "    interesting.add((\"const\", \"decaying past\", key_a))\n",
+    "    interesting.add((\"diverge_05\", \"decaying past\", key_a))\n",
     "\n",
     "\n",
     "experiments, df = run_experiments(dir+file, seeds, params, different_noises, different_windows, interesting)\n",
