--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,25 +1,43 @@
-@inproceedings{kour2014real,
-  title={Real-time segmentation of on-line handwritten arabic script},
-  author={Kour, George and Saabne, Raid},
-  booktitle={Frontiers in Handwriting Recognition (ICFHR), 2014 14th International Conference on},
-  pages={417--422},
-  year={2014},
-  organization={IEEE}
+@book{book,
+  author = {N. Cesa-Bianchi and G. Lugosi},
+  title = {Prediction, Learning, and Games},
+  year = {2006},
+  url = {https://ii.uni.wroc.pl/~lukstafi/pmwiki/uploads/AGT/Prediction_Learning_and_Games.pdf}
 }
 
-@inproceedings{kour2014fast,
-  title={Fast classification of handwritten on-line Arabic characters},
-  author={Kour, George and Saabne, Raid},
-  booktitle={Soft Computing and Pattern Recognition (SoCPaR), 2014 6th International Conference of},
-  pages={312--318},
-  year={2014},
-  organization={IEEE},
-  doi={10.1109/SOCPAR.2014.7008025}
+@book{ebook,
+  author = {R. J. Hyndman and G. Athanasopoulos},
+  title = {Forecasting: Principles and Practice},
+  publisher = {OTexts: Melbourne, Australia},
+  year = {2018},
+  edition = {2},
+  url = {https://otexts.com/fpp2/}
 }
 
-@article{hadash2018estimate,
-  title={Estimate and Replace: A Novel Approach to Integrating Deep Neural Networks with Existing Applications},
-  author={Hadash, Guy and Kermany, Einat and Carmeli, Boaz and Lavi, Ofer and Kour, George and Jacovi, Alon},
-  journal={arXiv preprint arXiv:1804.09028},
-  year={2018}
+@book{vvbook,
+  author = {V. V'yugin},
+  title = {Matematicheskie osnovy mashinnogo obucheniya i prognozirovaniya [Mathematical Foundations of Machine Learning and Forecasting]},
+  year = {2022},
+  url = {http://iitp.ru/upload/publications/6256/vyugin1.pdf}
+}
+
+@article{article,
+  author = {V. V'yugin and V. Trunov},
+  title = {Prognozirovanie lokal'no statsionarnykh dannykh s ispol'zovaniem predskazanii ekspertnykh strategiy [Prediction of Locally Stationary Data Using Prediction with Expert Advice]},
+  year = {2023},
+  url = {http://www.jip.ru/2023/470-487-2023.pdf}
+}
+
+@article{article98,
+  author = {M. Herbster and M. Warmuth},
+  title = {Tracking the best expert},
+  year = {1998},
+  url = {https://link.springer.com/content/pdf/10.1023/A:1007424614876.pdf}
+}
+
+@article{article02,
+  author = {O. Bousquet and M. Warmuth},
+  title = {Tracking a small set of experts by mixing past posteriors},
+  year = {2002},
+  url = {https://www.jmlr.org/papers/volume3/bousquet02b/bousquet02b.pdf}
 }
